--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="teal" type="color">#02a397</item>
-    <item name="navy" type="color">#25364d</item>
-    <item name="blue" type="color">#395373</item>
+    <item name="teal" type="color">##FFEB3B</item>
+    <item name="navy" type="color">##C2185B</item>
+    <item name="blue" type="color">##E91E63</item>
     <item name="blue_transparent" type="color">#b1395373</item>
     <item name="white" type="color">#ffffff</item>
 </resources>
