--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/navy"
+    android:background="@color/magenta"
     tools:context=".MainActivity">
 
     <!-- A CardView that contains a TextView -->
@@ -68,7 +68,7 @@
         android:id="@+id/cv_schedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/pink"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -81,7 +81,7 @@
                 android:id="@+id/img_schedule"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:src="@drawable/ic_event_white_24dp"
                 android:padding="5dp" />
 
@@ -89,7 +89,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/blue"
+                android:background="@color/pink"
                 android:padding="10dp">
 
                 <TextView
@@ -114,7 +114,7 @@
         android:id="@+id/cv_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/pink"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -122,13 +122,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/profile_card"
-            android:backgroundTint="@color/blue">
+            android:backgroundTint="@color/pink">
 
             <ImageView
                 android:id="@+id/img_profile"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:src="@drawable/ic_event_white_24dp"
                 android:padding="5dp" />
 
@@ -136,7 +136,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/blue"
+                android:background="@color/pink"
                 android:padding="10dp">
 
                 <TextView
@@ -161,7 +161,7 @@
         android:id="@+id/cv_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/pink"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -174,7 +174,7 @@
                 android:id="@+id/img_settings"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:src="@drawable/ic_event_white_24dp"
                 android:padding="5dp" />
 
@@ -182,7 +182,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/blue"
+                android:background="@color/pink"
                 android:padding="10dp">
 
                 <TextView
@@ -207,7 +207,7 @@
         android:id="@+id/cv_contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/pink"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -220,7 +220,7 @@
                 android:id="@+id/img_contact"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:src="@drawable/ic_event_white_24dp"
                 android:padding="5dp" />
 
@@ -228,7 +228,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/blue"
+                android:background="@color/pink"
                 android:padding="10dp">
 
                 <TextView
@@ -253,7 +253,7 @@
         android:id="@+id/cv_dashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/pink"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -261,13 +261,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/dashboard_card"
-            android:background="@color/blue">
+            android:background="@color/pink">
 
             <ImageView
                 android:id="@+id/img_dashboard"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:src="@drawable/ic_event_white_24dp"
                 android:padding="5dp" />
 
